infra/k8s-prod/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: www.gns.quangdvn.me
      http:
        paths:
          - path: /api/auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-serv
                port:
                  number: 3000
          - path: /api/driver/(.*)
            pathType: Prefix
            backend:
              service:
                name: driver-serv
                port:
                  number: 3000
          - path: /api/staff/(.*)
            pathType: Prefix
            backend:
              service:
                name: staff-serv
                port:
                  number: 3000
          - path: /api/gateway/(.*)
            pathType: Prefix
            backend:
              service:
                name: graphql-serv
                port:
                  number: 4000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-serv
                port:
                  number: 80
  tls:
    - hosts:
        - www.gns.quangdvn.me
      secretName: gns-tls
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.gns.quangdvn.me"
  labels:
    helm.sh/chart: ingress-nginx-3.19.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.43.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
